--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,4 +68,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: [read]
     steps:
-      - run: echo ${{ fromJson(needs.read.outputs.result) }}
+      - run: echo ${{ fromJson(needs.read.outputs.result).result }}
