--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,14 @@ jobs:
           uses: actions/cache@v3
           with:
             path: /usr/local/bin/chromedriver
-            key: ${{ runner.os }}-chromedriver
+            key: chromedriver-${{ runner.os }}
         - name: Install chromedriver
           if: steps.cache-chromedriver.outputs.cache-hit != 'true'
           uses: nanasess/setup-chromedriver@v2
         - name: Testing ${{ matrix.name }}
           id: test
           #run: axe ${{ matrix.url }} --chromedriver-path='/usr/local/bin/chromedriver' --dir reports/${{ matrix.name }} --save ${{ matrix.name }}-report-$(date +'%Y-%m-%dT%H:%M:%S').json
-          run: echo "axe-result=test" >> $GITHUB_OUTPUT
+          run: echo "axe-result=$(axe ${{ matrix.url }} --chromedriver-path='/usr/local/bin/chromedriver')" >> $GITHUB_OUTPUT
 
         ## Write for matrix outputs workaround 
         - uses: cloudposse/github-action-matrix-outputs-write@main
@@ -48,7 +48,7 @@ jobs:
             matrix-step-name: ${{ github.job }}
             matrix-key: ${{ matrix.name }}
             outputs: |-
-              result: ${{ steps.test.outputs.axe-result }}
+              axe-result: ${{ steps.test.outputs.axe-result }}
 
   ## Read matrix outputs 
   read:
@@ -68,4 +68,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: [read]
     steps:
-      - run: echo ${{ fromJson(needs.read.outputs.result).result }}
+      - name: Output
+        run: echo ${{ fromJson(needs.read.outputs.result).axe-result }}
