--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,9 @@ jobs:
             name: ${{ matrix.name }}
             path: ${{ matrix.name }}/*.json
 
-  save-results:
+  publish-results:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     needs: [axe-core-cli]
     steps:
@@ -54,4 +56,5 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           path: results
-      - run: ls -l results
+      - name: Publish new results
+        uses: stefanzweifel/git-auto-commit-action@v4
