--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [axe-core-cli]
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Download results
         uses: actions/download-artifact@v3
         with:
