--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,16 +37,14 @@ jobs:
               if: steps.cache-chromedriver.outputs.cache-hit != 'true'
               uses: nanasess/setup-chromedriver@v2
             - name: Create folder
-              run: |
-                cd _data
-                mkdir -p ${{ matrix.name }}
+              run: mkdir -p _data/${{ matrix.name }}
             - name: Testing ${{ matrix.name }}
-              run: axe --stdout --chromedriver-path='/usr/local/bin/chromedriver' ${{ join(matrix.urls, ', ') }} > ${{ matrix.name }}/$(date +'%Y-%m-%d').json
+              run: axe --stdout --chromedriver-path='/usr/local/bin/chromedriver' ${{ join(matrix.urls, ', ') }} > _data/${{ matrix.name }}/$(date +'%Y-%m-%d').json
             - name: Upload result
               uses: actions/upload-artifact@v3
               with:
                 name: ${{ matrix.name }}
-                path: ${{ matrix.name }}/*.json
+                path: _data/${{ matrix.name }}/*.json
             
     publish-results:
         permissions:
