--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
               if: steps.cache-chromedriver.outputs.cache-hit != 'true'
               uses: nanasess/setup-chromedriver@v2
             - name: Create folder
-              run: mkdir -p _data/${{ matrix.name }}
+              run: mkdir -p ${{ matrix.name }}
             - name: Testing ${{ matrix.name }}
               run: axe --stdout --chromedriver-path='/usr/local/bin/chromedriver' ${{ join(matrix.urls, ', ') }} > ${{ matrix.name }}/$(date +'%Y-%m-%d').json
             - name: Upload result
